[gd_scene load_steps=3 format=3 uid="uid://vxvi002nom1r"]

[ext_resource type="PackedScene" uid="uid://dc400vg5lqiyt" path="res://UI/Menus/MenuTemplate/menu_template.tscn" id="1_cwspk"]
[ext_resource type="Script" path="res://UI/Menus/SaveHighScore/save_high_score.gd" id="2_c7kug"]

[node name="SaveHighScore" node_paths=PackedStringArray("element_to_focus") instance=ExtResource("1_cwspk")]
script = ExtResource("2_c7kug")
element_to_focus = NodePath("MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer/AcceptBtn")

[node name="ColorRect" type="ColorRect" parent="." index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.207843)

[node name="titleLabel" parent="MarginContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
size_flags_stretch_ratio = 0.0
text = "Save high Score
"

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/titleLabel" index="0"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MenuContent" index="0"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Score: 0"

[node name="playerName" type="LineEdit" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
placeholder_text = "Player name"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer" index="2"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="AcceptBtn" type="Button" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Accept
"

[node name="retryBtn" type="Button" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "retry"

[node name="CancelBtn" type="Button" parent="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Cancel"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/playerName" to="." method="_on_player_name_text_changed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer/AcceptBtn" to="." method="saveScore"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer/retryBtn" to="." method="_on_retry_btn_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/MenuContent/VBoxContainer/HBoxContainer/CancelBtn" to="." method="_on_cancel_btn_button_down"]
